@@ -4212,8 +4212,10 @@
  TUR_util_vehicle_4: "BMC Kirpi"
  TUR_util_vehicle_5: "Otokar Cobra II"
  TUR_util_vehicle_5_short: "Cobra II"
- TUR_util_vehicle_6: "Otokar Ejder Yalcin"
- TUR_util_vehicle_7: "Otokar Ejder Yalcin II"
+ TUR_util_vehicle_6: "Nurol Ejder Yalcin"
+ TUR_util_vehicle_6_short: "Ejder Yalcin"
+ TUR_util_vehicle_7: "Nurol Ejder Yalcin II"
+ TUR_util_vehicle_7_short: "Ejder Yalcin II"
 
  TUR_Heavy_Anti_tank_2: "OMTAS"
  TUR_Anti_tank_2: "OMTAS"
