@@ -115,6 +115,7 @@ Bugfixes
 - Added tooltip to the Occupation of Lebanon idea
 - Added a bypass for Russia's Novorossiya focus if Ukraine is a puppet of Russia
 - Added missing anti-air attack from dual purpose light gun modules
+- Turkey's util vehicles Ejder Yalcin changed from Otokar to Nurol
 
 Map
 - New states in West Africa
